--- a/productos.css
+++ b/productos.css
@@ -16,6 +16,11 @@ nav a {
     text-decoration: none;
 }
 
+nav a:hover{
+    color: #c78c19;
+    text-decoration: underline;
+}
+
 nav{
     position: absolute;
     top: 110px;
@@ -42,15 +47,29 @@ nav{
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
+    border: 2px solid black ;
+    border-radius: 10px;
 }
 
+.productos li:hover{
+    border-color: #c78c19;
 
+}
+
+.productos li:active{
+    border-color: #078C19;
+}
 
 .productos h2{
     font-size: 30px;
     font-weight: bold ;
 
 }
+
+.productos li:hover h2{
+    font-size: 33px;
+}
+
 .producto-descripcion{
     font-size: 18px;
 }
@@ -59,4 +78,16 @@ nav{
     font-size: 20px;
     font-weight: bold;
     margin-top: 10px;
+}
+
+footer{
+    text-align: center;
+    background: url(imagenes/bg.jpg);
+    padding: 40px;
+}
+
+.copyright{
+    color: aliceblue;
+    font-size: 13px;
+    margin: 20px;
 }
