--- a/style.css
+++ b/style.css
@@ -1,63 +1,138 @@
-p{
+header{
+    background: #BBBBBB;
+    padding: 20px 0;
+}
+
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: #c78c19;
+    text-decoration: underline;
+}
+
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+
+.caja{
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
+}
+
+.productos{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px;
+}
+
+.productos li {
+    display: inline-block ;
     text-align: center;
-    background: #CCCCCC;
-}
-
-body {
-    background: #CCCCCC;
-}
-
-em strong {
-    color: red;
-}
-h2{
-    text-align: center;
-    background: #555555;
-}
-
-#mision{
-     font-size: 20 px; 
-     text-align: center;
-}
-p{
-    text-align: center;
-}
-
-#ban{	
-    width: 100%;
-
-}
-
-.item{
-    font-style: italic;
-
-}
-
-.diferencial {
-background: #FFFFFF;
-padding: 30px;
-}
-
-.main {
-    font-size: 10px;
-    padding: 20px;
-}
-
-.img_difer {
-    width: 50%;
-}
-
-.ul {
-    display: inline-block;
+    width: 30%;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid black ;
+    border-radius: 10px;
 }
 
-.titulo-centro{
+.productos li:hover{
+    border-color: #c78c19;
+
+}
+
+.productos li:active{
+    border-color: #078C19;
+}
+
+.productos h2{
+    font-size: 30px;
+    font-weight: bold ;
+
+}
+
+.productos li:hover h2{
+    font-size: 33px;
+}
+
+.producto-descripcion{
+    font-size: 18px;
+}
+
+.producto-precio{
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer{
     text-align: center;
+    background: url(imagenes/bg.jpg);
+    padding: 40px;
 }
 
-.titulo-principal{
-    padding-left: 30px;
+.copyright{
+    color: aliceblue;
+    font-size: 13px;
+    margin: 20px;
+}
+
+main {
+    width: 940px;
+    margin: 0 auto ;
+}
+
+form {
+    margin: 40px 0;
+}
+
+form label, form legend {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+.input-padron {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+
+}
+
+.checkbox {
+    margin: 20px 0;
+}
+
+.enviar {   
+    width: 40%;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background: orange;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor:pointer;
+}
+
+.enviar:hover{
+    background: red;
+    transform: scale(1.2)rotate(0deg);
 }
