--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+
+body {
+    font-family: 'Monserrat',sans-serif;
+}
+
+
 header{
     background: #BBBBBB;
     padding: 20px 0;
@@ -92,10 +98,6 @@ footer{
     margin: 20px;
 }
 
-main {
-    width: 940px;
-    margin: 0 auto ;
-}
 
 form {
     margin: 40px 0;
@@ -135,4 +137,127 @@ form label, form legend {
 .enviar:hover{
     background: red;
     transform: scale(1.2)rotate(0deg);
+}
+
+table{
+    margin: 40px 40px;
+
+}
+
+thead{
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+td,th{
+    border: 1px solid black;
+    padding: 8px 15px;
+}
+
+/*/ para home/*/
+
+.banner{
+    width: 100%;
+}
+
+.titulo-principal{
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+}
+
+.principal p{
+    margin: 0 0 1em;
+}
+
+.principal strong{
+    font-weight: bold;
+}
+
+.principal em{
+    font-style: italic;
+}
+
+.imagen-diferenciales{
+    width: 40%;
+    float: right;   
+}
+
+.utensilios{
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+
+.mapa{
+    padding: 3em 0;
+    background: linear-gradient( #fefefe, #CCCCCC);
+
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+
+}
+
+.mapacontenido{
+    width: 940px;
+    margin: 0 auto;
+}
+
+
+.video{
+    width: 560;
+    height: 1em auto ;
+
+}
+
+.contenido-diferenciales{
+    width: 640px;
+    margin: 0 auto;
+
+}
+
+.lista-diferenciales{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.item{
+    line-height: 1.5;
+}
+
+.item :before{
+    content: "";
+}
+
+.item:fist-child{
+font-weight: bold;
+}
+
+.banner{
+    width: 100%;
+}
+
+.principal{
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px ;
+    margin: 0 auto;
+    
+}
+
+.diferencial{
+    padding: 3em 0;
+    background: #888888;
+}
+
+
+
+p::first-line{
+    font-style: italic;
 }
