--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
-
-body {
-    font-family: 'Monserrat',sans-serif;
+body{
+    font-family: 'Montserrat', sans-serif;
 }
 
-
-header{
-    background: #BBBBBB;
+header {
+    background-color: #BBBBBB;
     padding: 20px 0;
+}
+
+.caja{
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
+}
+
+nav{
+    position: absolute;
+    top:110px;
+    right: 0;
 }
 
 nav li{
@@ -14,9 +24,9 @@ nav li{
     margin: 0 0 0 15px;
 }
 
-nav a {
+nav a{
     text-transform: uppercase;
-    color: black;
+    color: #000000;
     font-weight: bold;
     font-size: 22px;
     text-decoration: none;
@@ -27,49 +37,36 @@ nav a:hover{
     text-decoration: underline;
 }
 
-nav{
-    position: absolute;
-    top: 110px;
-    right: 0;
-}
-
-.caja{
-    width: 940px;
-    position: relative;
-    margin: 0 auto;
-}
-
 .productos{
     width: 940px;
     margin: 0 auto;
     padding: 50px;
 }
 
-.productos li {
-    display: inline-block ;
+
+.productos li{
+    display: inline-block;
     text-align: center;
     width: 30%;
     vertical-align: top;
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
-    border: 2px solid black ;
+    border: 2px solid #000000;
     border-radius: 10px;
 }
 
 .productos li:hover{
-    border-color: #c78c19;
-
+    border-color:#c78c19;
 }
 
 .productos li:active{
-    border-color: #078C19;
+    border-color:#088c19;
 }
 
 .productos h2{
     font-size: 30px;
-    font-weight: bold ;
-
+    font-weight: bold;
 }
 
 .productos li:hover h2{
@@ -83,79 +80,81 @@ nav{
 .producto-precio{
     font-size: 20px;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top:10px;
 }
 
 footer{
     text-align: center;
     background: url(imagenes/bg.jpg);
-    padding: 40px;
+    padding:40px;
 }
 
 .copyright{
-    color: aliceblue;
+    color:#FFFFFF;
     font-size: 13px;
-    margin: 20px;
+    margin:20px;
 }
 
+main{
+    width: 940px;
+    margin: 0 auto;    
+}
 
-form {
+form{
     margin: 40px 0;
 }
 
-form label, form legend {
+form label, form legend{
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
 }
 
-.input-padron {
+.input-padron{
     display: block;
     margin: 0 0 20px;
     padding: 10px 25px;
     width: 50%;
-
 }
 
-.checkbox {
-    margin: 20px 0;
+.checkbox{
+    margin:20px 0;
 }
 
-.enviar {   
+.enviar{
     width: 40%;
     padding: 15px 0;
     font-size: 18px;
     font-weight: bold;
-    color: white;
+    color:white;
     background: orange;
-    border: none;
+    border:none;
     border-radius: 5px;
     transition: 1s all;
     cursor:pointer;
 }
 
 .enviar:hover{
-    background: red;
-    transform: scale(1.2)rotate(0deg);
+    background: darkorange;
+    transform: scale(1.2);
 }
 
 table{
     margin: 40px 40px;
-
 }
 
 thead{
     background: #555555;
-    color: white;
+    color:white;
     font-weight: bold;
 }
 
 td,th{
-    border: 1px solid black;
+    border: 1px solid #000000;
     padding: 8px 15px;
 }
 
-/*/ para home/*/
+/*Aquí inicia el CSS para nuestra home*/
 
 .banner{
     width: 100%;
@@ -165,7 +164,7 @@ td,th{
     text-align: center;
     font-size: 2em;
     margin: 0 0 1em;
-    clear: left;
+    clear:left;
 }
 
 .principal p{
@@ -180,84 +179,27 @@ td,th{
     font-style: italic;
 }
 
-.imagen-diferenciales{
-    width: 40%;
-    float: right;   
-}
-
 .utensilios{
     width: 120px;
-    float: left;
+    float:left;
     margin: 0 20px 20px 0;
 }
 
 .mapa{
     padding: 3em 0;
-    background: linear-gradient( #fefefe, #CCCCCC);
-
 }
 
-.mapa p {
+.mapa p{
     margin: 0 0 2em;
     text-align: center;
-
 }
 
-.mapacontenido{
-    width: 940px;
-    margin: 0 auto;
+.imagenDiferenciales{
+    width: 60%;
 }
-
 
 .video{
-    width: 560;
-    height: 1em auto ;
-
+    width: 560px;
+    margin: 1em auto;
 }
 
-.contenido-diferenciales{
-    width: 640px;
-    margin: 0 auto;
-
-}
-
-.lista-diferenciales{
-    width: 40%;
-    display: inline-block;
-    vertical-align: top;
-}
-
-.item{
-    line-height: 1.5;
-}
-
-.item :before{
-    content: "";
-}
-
-.item:fist-child{
-font-weight: bold;
-}
-
-.banner{
-    width: 100%;
-}
-
-.principal{
-    padding: 3em 0;
-    background: #FEFEFE;
-    width: 940px ;
-    margin: 0 auto;
-    
-}
-
-.diferencial{
-    padding: 3em 0;
-    background: #888888;
-}
-
-
-
-p::first-line{
-    font-style: italic;
-}
